...
    }
    .toolbar {
      ToolbarItemGroup(placement: .navigationBarTrailing) {
        if model.UserId == workspace.owner {
          NavigationLink(destination: MemberListView().environmentObject(model)) {
            Image(systemName: "person.badge.plus")
          }.accessibilityLabel("Add Members")
        }
        
        NavigationLink(destination: ChannelNewView().environmentObject(model)) {
          Image(systemName: "plus.app")
        }.accessibilityLabel("New Channel")
      }
    }
  }
}


...
